<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntryActivity">

    <EditText
        android:id="@+id/add_telefono_input"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/add_telefono_label"
        app:layout_constraintTop_toBottomOf="@+id/add_nombre_input" />

    <TextView
        android:id="@+id/add_nombre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/nombre"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_nombre_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_telefono_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/telefono"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_telefono_input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_nombre_input"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/add_telefono_input"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/añadir"
        android:onClick="save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_telefono_input" />

    <Button
        android:id="@+id/add_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="back"
        android:text="@string/volver"
        app:layout_constraintStart_toEndOf="@+id/add_add_button"
        app:layout_constraintTop_toBottomOf="@+id/add_telefono_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
